update docker-compose, increase maxCapacity for trucks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
             - route
             - driver
             - customer
+            - thirdparty
     # gremlin:
     #     image: gremlin/gremlin
     #     pid: "host"
