--- a/third-party-services/south-west/Dockerfile
+++ b/third-party-services/south-west/Dockerfile
@@ -5,7 +5,7 @@ ADD https://github.com/golang/dep/releases/download/v0.4.1/dep-linux-amd64 /usr/
 RUN chmod +x /usr/bin/dep
 
 # Copy the code from the host and compile it
-WORKDIR $GOPATH/src/terazo_parcel_service
+WORKDIR $GOPATH/src/terazo_parcel_service/third-party-services
 COPY Gopkg.toml Gopkg.lock ./
 RUN dep ensure --vendor-only
 COPY . ./
@@ -14,7 +14,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix nocgo -o /app .
 FROM alpine:latest
 COPY --from=builder /app ./
 
-EXPOSE 8080 8081 8082 8083 8084 8085
+EXPOSE 8080 8081 8082 8083 8084 8085 8087
 
 ENTRYPOINT ["./app"]
-CMD ["customer"]
+CMD ["south-west-service"]
