--- a/third-party-services/north-west/Dockerfile
+++ b/third-party-services/north-west/Dockerfile
@@ -5,7 +5,7 @@ ADD https://github.com/golang/dep/releases/download/v0.4.1/dep-linux-amd64 /usr/
 RUN chmod +x /usr/bin/dep
 
 # Copy the code from the host and compile it
-WORKDIR $GOPATH/src/terazo_parcel_service
+WORKDIR $GOPATH/src/terazo_parcel_service/third-party-services
 COPY Gopkg.toml Gopkg.lock ./
 RUN dep ensure --vendor-only
 COPY . ./
@@ -17,4 +17,4 @@ COPY --from=builder /app ./
 EXPOSE 8080 8081 8082 8083 8084 8085
 
 ENTRYPOINT ["./app"]
-CMD ["customer"]
+CMD ["north-west-service"]
